Updated CV: name highlight and section pills

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <div class="container">
 
   <section>
-    <h2><i class="fas fa-bullseye section-icon"></i> Objective</h2>
+    <h2><i class="fas fa-bullseye"></i> Objective <span class="pill gold">Objective</span></h2>
     <p>Seasoned IT professional with over 15 years of experience in banking and enterprise IT environments. Proven leader in infrastructure support, cybersecurity, and team development. Adept at aligning technology with business strategy and delivering scalable, secure solutions. Seeking opportunities to leverage strategic vision, operational excellence, and industry expertise to drive innovation and business growth.</p>
   </section>
 
   <section>
-    <h2><i class="fas fa-lightbulb section-icon"></i> Technology Leadership Highlights</h2>
+    <h2><i class="fas fa-lightbulb"></i> Technology Leadership Highlights <span class="pill bronze">Highlights</span></h2>
     <ul>
       <li>Directed technology operations and infrastructure supporting over 60 branches in the financial sector.</li>
       <li>Introduced ITIL-based processes, reducing incident response time and increasing team efficiency.</li>
@@ -43,7 +43,7 @@
   </section>
 
   <section>
-    <h2><i class="fas fa-briefcase section-icon"></i> Professional Experience</h2>
+    <h2><i class="fas fa-briefcase"></i> Professional Experience <span class="pill bronze">Experience</span></h2>
 
     <h3>Access Bank Plc, Victoria Island, Lagos</h3>
     <strong>Assistant Manager, Enterprise Platform Support (Unix/AIX)/Datacenter Management</strong>
@@ -75,7 +75,7 @@
   </section>
 
   <section>
-    <h2><i class="fas fa-graduation-cap section-icon"></i> Education & Certifications</h2>
+    <h2><i class="fas fa-graduation-cap"></i> Education & Certifications <span class="pill teal">Education</span></h2>
     <ul>
       <li>M.Sc. Information Technology, University of Lagos – 2018</li>
       <li>B.Sc. Electrical & Electronics Engineering, University of Lagos – 2001</li>
@@ -87,7 +87,7 @@
   </section>
 
   <section>
-    <h2><i class="fas fa-cogs section-icon"></i> Core Competencies & Skills</h2>
+    <h2><i class="fas fa-cogs"></i> Core Competencies & Skills <span class="pill purple">Skills</span></h2>
     <div class="skills">
       <span>Technology Strategy</span>
       <span>Infrastructure Architecture</span>
@@ -102,7 +102,7 @@
   </section>
 
   <section>
-    <h2><i class="fas fa-tools section-icon"></i> Tools & Technologies</h2>
+    <h2><i class="fas fa-tools"></i> Tools & Technologies <span class="pill orange">Tools</span></h2>
     <div class="tools">
       <span>IBM Power Systems</span>
       <span>Unix/AIX/Linux</span>
@@ -123,7 +123,7 @@
   </section>
 
   <section>
-    <h2><i class="fas fa-users section-icon"></i> References</h2>
+    <h2><i class="fas fa-users"></i> References <span class="pill gray">References</span></h2>
     <p>Available upon request</p>
   </section>
 
