--- a/index.html
+++ b/index.html
@@ -33,12 +33,20 @@
   <!-- Header -->
   <header id="top">
     <h1 class="name">Oluwayemisi Olabanji Okunrounmu</h1>
-    <p>📞 08034737155 | 📧 yemmmyc@hotmail.com</p>
-    <p>🏠 6 Adesina Street, Zansi Estate, Off Iwaya Rd, Onike, Sabo Yaba, Lagos State</p>
+    <p class="contact-info">
+      📞 <strong>08034737155</strong> | 📧 <strong>yemmmyc@hotmail.com</strong><br>
+      🏠 <strong>6 Adesina Street, Zansi Estate, Off Iwaya Rd, Onike, Sabo Yaba, Lagos State</strong>
+    </p>
     <div class="social-links">
-      <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://yourportfolio.com" target="_blank"><i class="fas fa-globe"></i></a>
+      <a href="https://www.linkedin.com/in/oluwayemisi-okunrounmu-13936a18" target="_blank" title="LinkedIn">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://github.com/Yemmmyc/" target="_blank" title="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://yemmmyc.github.io/my-portfolio/" target="_blank" title="Portfolio">
+        <i class="fas fa-globe"></i>
+      </a>
     </div>
   </header>
 
@@ -115,3 +123,4 @@
 
 </body>
 </html>
+
