--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 <!-- Main Content -->
 <div class="content-container">
+
   <section id="objective">
     <h2><i class="fas fa-bullseye"></i> Objective</h2>
     <p>Seasoned IT professional with over 15 years of experience in banking and enterprise IT environments. Proven leader in infrastructure support, cybersecurity, and team development. Adept at aligning technology with business strategy and delivering scalable, secure solutions. Seeking opportunities to leverage strategic vision, operational excellence, and industry expertise to drive innovation and business growth.</p>
@@ -61,8 +62,10 @@
 
   <section id="experience">
     <h2><i class="fas fa-briefcase"></i> Professional Experience</h2>
+
     <h3>Access Bank Plc, Victoria Island, Lagos<br>
-    <small>Assistant Manager, Enterprise Platform Support (Unix/AIX)/Datacenter Management | June 2022 – Jan 2024</small></h3>
+      <small>Assistant Manager, Enterprise Platform Support (Unix/AIX)/Datacenter Management | June 2022 – Jan 2024</small>
+    </h3>
     <ul>
       <li>Led enterprise platform operations, ensuring uptime and resilience for core banking applications.</li>
       <li>Managed infrastructure upgrades, security patching, and datacenter operations.</li>
@@ -71,7 +74,8 @@
     </ul>
 
     <h3>Access Bank Plc IT Regional Office, Gbagada<br>
-    <small>Senior Banking Officer, Regional IT Support Team Lead | Feb 2012 – June 2022</small></h3>
+      <small>Senior Banking Officer, Regional IT Support Team Lead | Feb 2012 – June 2022</small>
+    </h3>
     <ul>
       <li>Directed a team of 25 supporting over 60 branches across Lagos.</li>
       <li>Coordinated end-to-end IT services from connectivity to ATM support and server management.</li>
@@ -80,7 +84,8 @@
     </ul>
 
     <h3>Intercontinental Bank Plc, Ikeja & Akure Branches<br>
-    <small>Banking & IT Support Officer | 2004 – 2012</small></h3>
+      <small>Banking & IT Support Officer | 2004 – 2012</small>
+    </h3>
     <ul>
       <li>Delivered full-scope IT support, infrastructure optimization, and user training.</li>
       <li>Supported rollout of branch technology and ongoing upgrades.</li>
@@ -124,6 +129,12 @@
       <span>Jenkins</span>
       <span>GitHub</span>
       <span>Kubernetes</span>
+      <span>AWS</span>
+      <span>GCP</span>
+      <span>OCI</span>
+      <span>Ansible</span>
+      <span>Terraform</span>
+      <span>Monitoring Tools</span>
     </div>
   </section>
 
@@ -131,6 +142,7 @@
     <h2><i class="fas fa-users"></i> References</h2>
     <p>Available upon request</p>
   </section>
+
 </div>
 
 <footer>
