Updated CV layout with oxblood theme and black headers

--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 
 <!-- Main Content -->
 <div class="content-container">
-
+  
+  <!-- Objective -->
   <section id="objective">
     <h2><i class="fas fa-bullseye"></i> Objective</h2>
     <p>Seasoned IT professional with over 15 years of experience in banking and enterprise IT environments. Proven leader in infrastructure support, cybersecurity, and team development. Adept at aligning technology with business strategy and delivering scalable, secure solutions. Seeking opportunities to leverage strategic vision, operational excellence, and industry expertise to drive innovation and business growth.</p>
   </section>
 
+  <!-- Highlights -->
   <section id="highlights">
     <h2><i class="fas fa-lightbulb"></i> Technology Leadership Highlights</h2>
     <ul>
@@ -60,6 +62,7 @@
     </ul>
   </section>
 
+  <!-- Experience -->
   <section id="experience">
     <h2><i class="fas fa-briefcase"></i> Professional Experience</h2>
 
@@ -92,6 +95,7 @@
     </ul>
   </section>
 
+  <!-- Education -->
   <section id="education">
     <h2><i class="fas fa-graduation-cap"></i> Education & Certifications</h2>
     <ul>
@@ -107,6 +111,7 @@
     </ul>
   </section>
 
+  <!-- Skills -->
   <section id="skills">
     <h2><i class="fas fa-cogs"></i> Core Competencies & Skills</h2>
     <div class="skills">
@@ -120,6 +125,7 @@
     </div>
   </section>
 
+  <!-- Tools -->
   <section id="tools">
     <h2><i class="fas fa-tools"></i> Tools & Technologies</h2>
     <div class="tools">
@@ -129,22 +135,17 @@
       <span>Jenkins</span>
       <span>GitHub</span>
       <span>Kubernetes</span>
-      <span>AWS</span>
-      <span>GCP</span>
-      <span>OCI</span>
-      <span>Ansible</span>
-      <span>Terraform</span>
-      <span>Monitoring Tools</span>
     </div>
   </section>
 
+  <!-- References -->
   <section id="references">
     <h2><i class="fas fa-users"></i> References</h2>
     <p>Available upon request</p>
   </section>
-
 </div>
 
+<!-- Footer -->
 <footer>
   &copy; 2025 Oluwayemisi Olabanji Okunrounmu
 </footer>
