Updated CV layout with oxblood theme and black headers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- Main Content -->
 <div class="content-container">
-  
+
   <!-- Objective -->
   <section id="objective">
     <h2><i class="fas fa-bullseye"></i> Objective</h2>
@@ -67,8 +67,7 @@
     <h2><i class="fas fa-briefcase"></i> Professional Experience</h2>
 
     <h3>Access Bank Plc, Victoria Island, Lagos<br>
-      <small>Assistant Manager, Enterprise Platform Support (Unix/AIX)/Datacenter Management | June 2022 – Jan 2024</small>
-    </h3>
+    <small>Assistant Manager, Enterprise Platform Support (Unix/AIX)/Datacenter Management | June 2022 – Jan 2024</small></h3>
     <ul>
       <li>Led enterprise platform operations, ensuring uptime and resilience for core banking applications.</li>
       <li>Managed infrastructure upgrades, security patching, and datacenter operations.</li>
@@ -77,8 +76,7 @@
     </ul>
 
     <h3>Access Bank Plc IT Regional Office, Gbagada<br>
-      <small>Senior Banking Officer, Regional IT Support Team Lead | Feb 2012 – June 2022</small>
-    </h3>
+    <small>Senior Banking Officer, Regional IT Support Team Lead | Feb 2012 – June 2022</small></h3>
     <ul>
       <li>Directed a team of 25 supporting over 60 branches across Lagos.</li>
       <li>Coordinated end-to-end IT services from connectivity to ATM support and server management.</li>
@@ -87,8 +85,7 @@
     </ul>
 
     <h3>Intercontinental Bank Plc, Ikeja & Akure Branches<br>
-      <small>Banking & IT Support Officer | 2004 – 2012</small>
-    </h3>
+    <small>Banking & IT Support Officer | 2004 – 2012</small></h3>
     <ul>
       <li>Delivered full-scope IT support, infrastructure optimization, and user training.</li>
       <li>Supported rollout of branch technology and ongoing upgrades.</li>
@@ -143,6 +140,7 @@
     <h2><i class="fas fa-users"></i> References</h2>
     <p>Available upon request</p>
   </section>
+
 </div>
 
 <!-- Footer -->
