--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- Objective -->
   <section id="objective">
     <h2><i class="fas fa-bullseye"></i> Objective</h2>
-    <p>Seasoned IT professional with over 15 years of experience in banking and enterprise IT environments. Proven leader in infrastructure support, cybersecurity, and team development. Adept at aligning technology with business strategy and delivering scalable, secure solutions. Seeking opportunities to leverage strategic vision, operational excellence, and industry expertise to drive innovation and business growth.</p>
+    <p>Seasoned IT professional with over 15 years of experience in banking and enterprise IT environments. Proven leader in infrastructure support, cybersecurity, and team development. Adapt at aligning technology with business strategy and delivering scalable, secure solutions. Seeking opportunities to leverage strategic vision, operational excellence, and industry expertise to drive innovation and business growth.</p>
   </section>
 
   <!-- Highlights -->
