Extend CV card width, retain oxblood theme and black sidebar

--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
 
 <!-- Main Content -->
 <div class="content-container">
-  <section id="objective">
+
+  <section id="objective" class="cv-card">
     <h2><i class="fas fa-bullseye"></i> Objective</h2>
     <p>Seasoned IT professional with over 15 years of experience in banking and enterprise IT environments. Proven leader in infrastructure support, cybersecurity, and team development. Adept at aligning technology with business strategy and delivering scalable, secure solutions. Seeking opportunities to leverage strategic vision, operational excellence, and industry expertise to drive innovation and business growth.</p>
   </section>
 
-  <section id="highlights">
+  <section id="highlights" class="cv-card">
     <h2><i class="fas fa-lightbulb"></i> Technology Leadership Highlights</h2>
     <ul>
       <li>Directed technology operations and infrastructure supporting over 60 branches in the financial sector.</li>
@@ -59,7 +60,7 @@
     </ul>
   </section>
 
-  <section id="experience">
+  <section id="experience" class="cv-card">
     <h2><i class="fas fa-briefcase"></i> Professional Experience</h2>
     <h3>Access Bank Plc, Victoria Island, Lagos<br>
     <small>Assistant Manager, Enterprise Platform Support (Unix/AIX)/Datacenter Management | June 2022 – Jan 2024</small></h3>
@@ -87,7 +88,7 @@
     </ul>
   </section>
 
-  <section id="education">
+  <section id="education" class="cv-card">
     <h2><i class="fas fa-graduation-cap"></i> Education & Certifications</h2>
     <ul>
       <li>M.Sc. Information Technology, University of Lagos – 2018</li>
@@ -102,7 +103,7 @@
     </ul>
   </section>
 
-  <section id="skills">
+  <section id="skills" class="cv-card">
     <h2><i class="fas fa-cogs"></i> Core Competencies & Skills</h2>
     <div class="skills">
       <span>Technology Strategy</span>
@@ -115,7 +116,7 @@
     </div>
   </section>
 
-  <section id="tools">
+  <section id="tools" class="cv-card">
     <h2><i class="fas fa-tools"></i> Tools & Technologies</h2>
     <div class="tools">
       <span>IBM Power Systems</span>
@@ -132,7 +133,7 @@
     </div>
   </section>
 
-  <section id="references">
+  <section id="references" class="cv-card">
     <h2><i class="fas fa-users"></i> References</h2>
     <p>Available upon request</p>
   </section>
